# Hamburger

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE.md  PKGBUILD  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  README.md  example.env.cmake  oldAttachedParameter.h  performance.txt  todo.md  todo.txt
.github/: FUNDING.yml
.github/workflows/: Hamburger_Build.yml  Hamburger_Build_HURLEY.yml
Assets/: hamburgernew6.png-autosave.kra
dsp/: AutoGain.h  CMakeLists.txt  CombFilter.h  Compander.cpp  Compander.h  Compressor.cpp  Compressor.h  Curves.h  EnvelopeFollower.cpp  EnvelopeFollower.h  Fifo.h  FrequencyShifter.h  Gain.h  NoiseDistortions.h  OversamplingStack.h  PreDistortion.h  PreReverb.h  PrimaryDistortion.h  ProcessDuplicator.h  RingMod.h  SIMDBufferOps.h  SIMDGain.h  SVTPTFilter.cpp  SVTPTFilter.h  SmoothParam.h  WaveShapers.h
dsp/Distortions/: CMakeLists.txt  Cooked.cpp  Cooked.h  DiodeWaveshape.cpp  DiodeWaveshape.h  Erosion.cpp  Fuzz.cpp  Fuzz.h  Grunge.cpp  Grunge.h  HardClip.cpp  HardClip.h  HarshGate.h  Jeff.cpp  Jeff.h  MatrixWaveshaper.h  Patty.cpp  Patty.h  PattyFuzz.cpp  PattyFuzz.h  PhaseDist.cpp  PhaseDist.h  PostClip.cpp  PostClip.h  Redux.cpp  Redux.h  Rubidium.h  Sizzle.cpp  Sizzle.h  SoftClipper.cpp  SoftClipper.h  WaveShapers.h
dsp/Distortions/analogtube/: DCBlocker.h
dsp/Distortions/hysteresis/: CMakeLists.txt  HysteresisOps.h  HysteresisProcessing.cpp  HysteresisProcessing.h  TapeDistortionProcessor.cpp  TapeDistortionProcessor.h
dsp/Distortions/hysteresis/TapeDistortion/: DCBlocker.h  HysteresisOps.h  HysteresisProcessing.h  TapeDistortionProcessor.cpp  TapeDistortionProcessor.h
dsp/Distortions/naivetube/: CMakeLists.txt  NaiveTubeDistortion.cpp  NaiveTubeDistortion.h
dsp/Distortions/naivetube/fxobjects/: CMakeLists.txt  fxobjects.h
dsp/Distortions/pinknoise/: CMakeLists.txt  pinknoise.cpp
dsp/Distortions/tube/: Amp.cpp  Amp.h  CMakeLists.txt  LossyIntegrator.cpp  LossyIntegrator.h  Valve.h
dsp/Dynamics/: CMakeLists.txt  Compressor.cpp  Compressor.h  Curves.h  Dynamics.h  MBComp.h  MSComp.h  StereoComp.h  TypeA.cpp  TypeA.h
dsp/FIlter/: ACoffs.h  CMakeLists.txt  EmphasisFilter.h
dsp/Filtering/: ACoffs.cpp  EmphasisFilter.h
dsp/FrequencyShifting/: BlackmanWindow.h  CMakeLists.txt  FreqShiftBiquad.h  FrequencyShifter.cpp  FrequencyShifter.h  FrequencyShifterAlt.h  HilbertBiquad.h  HilbertShifter.cpp  HilbertShifter.h  HilbertShifterAlt.h  QuadratureOscillator.h  WeaverShifter.h
dsp/FrequencyShifting/hiir/: CMakeLists.txt  PolyphaseIir2Designer.cpp  fnc.h
dsp/Noise/: CMakeLists.txt  Erosion.cpp  Erosion.h  Jeff.cpp  Jeff.h  Redux.cpp  Redux.h  Sizzle.cpp  Sizzle.h
dsp/PreDistortions/: AllPassChain.h  CMakeLists.txt  CombFilter.h  Grunge.cpp  Grunge.h  OldSVFAllPass.h  PreDistortion.h  PreReverb.h  SIMDAllPassChain.h  SVFAllPassChain.h
gui/: BurgerAlert.h  BurgerAlertWindow.h  BurgerSaveAlert.h  CMakeLists.txt  EQPanel.h  EmphasisPanel.h  FilmStripKnob.h  Info.h  Knob.h  LeftColumn.h  LightButton.h  ParameterKnob.h  Params.h  PluginEditor.h  PresetPanel.h  SaturationColumn.h  UtilColumn.h
gui/DistortionPanels/: Classic.h  Distortions.h
gui/Emphasis/: EmphasisPanel.h  ShiftPanel.h
gui/LookAndFeel/: CMakeLists.txt  CmakeLists.txt  ComboBoxLookAndFeel.h  HamburgerLAF.cpp  HamburgerLAF.h  KnobLAF.h  LabelLookAndFeel.h  OtherLookAndFeel.h  Palette.cpp  Palette.h  SaturationLookAndFeel.h
gui/Modules/: LightButton.h  Module.h  Panel.h  Scope.h
gui/Modules/Panels/: AllPassPanel.h  ClassicSatPanel.h  CompanderPanel.h  EQPanel.h  EmptyPanel.h  ErosionPanel.h  GatePanel.h  GrungePanel.h  JeffPanel.h  LogoPanel.h  MBCompPanel.h  MSCompPanel.h  MatrixSatPanel.h  OtherUtils.h  PanelNames.h  PhaseDistPanel.h  PostClipPanel.h  ReductionPanel.h  RubidiumSatPanel.h  ScopePanel.h  SettingsPanel.h  SizzlePanel.h  StereoCompPanel.h  TapeSatPanel.h  TubeSatPanel.h  TypeAPanel.h  UtilityPanel.h  WaveshaperPanel.h
gui/NoisePanels/: ErosionPanel.h  NoisePanel.h  SizzlePanel.h
gui/PreDistortionPanels/: CombPanel.h  DisperserPanel.h  PreDistortions.h
gui/Utils/: HamburgerFonts.h
gui_old/: CMakeLists.txt  FilmStripKnob.h  PluginEditor.cpp  PluginEditor.h  readme.md
gui_old/DistortionPanels/: Tube.h
gui_old/Emphasis/: EQPanel.h  EmphasisPanel.h
gui_old/LookAndFeel/: ComboBoxLookAndFeel.h  SaturationLookAndFeel.h
gui_old/NoisePanels/: JeffPanel.h  ReduxPanel.h
gui_old/PreDistortionPanels/: CombPanel.h  PreDistortions.h  ReverbPanel.h
preset/: PresetManager.h
service/: CMakeLists.txt  PresetManager.cpp  PresetManager.h
setup/: innosetup.iss  productbuild.py
setup/assets/pages/: conclusion.html
utils/: Params.h
